# dig-portal-ai

./: .gitattributes  .gitignore  .gitmodules  README.md  compose.yaml  portal-model.yaml  requirements.txt
kg-ingress/: README.md  pipeline.py  pipeline_deprecated.py  pyproject.toml
kg-ingress/data/: amp-traits-mapping-portal-phenotypes_06262024.csv
kg-ingress/kg_ingress/: __init__.py  assets.py  pipeline.py
kg-ingress/kg_ingress/model/: portal_model.py
kg-ingress/kg_ingress/models/: portal_model.py
kg-ingress/kg_ingress/utils/: phenotype_utils.py
kg-ingress/kg_ingress_tests/: test_assets.py  test_phenotype_utils.py
portal-ai/: .env.example  README.md  assistant-config.ts  components.json  eslint.config.mjs  package.json  pnpm-lock.yaml
portal-ai-turbo/: package.json
portal-ai/app/: globals.css  layout.tsx  page.tsx
portal-ai/app/(auth)/signin/: page.tsx
portal-ai/app/api/assistants/threads/: route.ts
portal-ai/app/api/auth/[...nextauth]/: route.ts
portal-ai/app/chat/: page.tsx
portal-ai/apps/web/: package.json
portal-ai/apps/web/app/: page.tsx
portal-ai/components/: AssistantMessage.tsx  Chat.tsx  ChatInput.tsx  FunctionChat.tsx  Navbar.tsx  UserMessage.tsx
portal-ai/functions/: handler.ts  index.ts
portal-ai/hooks/: useAssistantChat.ts
portal-ai/lib/: auth.ts
portal-tools/: Dockerfile  build_script.sh  pyproject.toml  requirements.txt  test.sh
portal-tools/portal_tools/: app.py  server.py
portal-tools/portal_tools/tools/: cypher_utils.py  pigean.py
portal-tools/terraform/: main.tf  variables.tf
(+2 files in other folders)
