[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kg_ingress"]

[project]
name = "kg_ingress"
version = "0.1.0"
dependencies = [
    "dagster",
    "pandas",
    "rdflib",
    "requests",
    "neo4j",
    "pytest",
    "pytest-mock",
]

[tool.pytest.ini_options]
testpaths = ["kg_ingress_tests"]
python_files = ["test_*.py"] 