[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portal-tools"
version = "0.0.1"
description = "Tools for AI agents to interact with the portal"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "requests",
    "mcp[cli]",
    "sentence-transformers>=4.1.0",
    "flask",
    "flask-cors",
    "gunicorn"
]

[project.optional-dependencies]
dev = [
    "pytest",
]
